--- a/css/style.css
+++ b/css/style.css
@@ -55,3 +55,11 @@ form {
     text-align: center;
     margin-top: 10px;
 }
+
+img {
+    border: 1px solide black;
+    border-radius: 5px;
+    margin-bottom: 3rem;
+    margin-left: 32%;
+    margin-top: 25px;
+}
