--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,17 @@
 html {
-    background-image: url(../images/background2.jpg);
+    background: url("../images/background2.jpg") no-repeat center center fixed;
     background-repeat: no-repeat;
-    background-size: cover;
     margin-top: -30px;
     color: #fff;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 }
 
 body {
     background-image: url(../images/transparent.jpg);
-    height: 850px;
+    height: 100%;
     width: 100%;
     margin: -10px;
 }
@@ -69,4 +72,13 @@ img {
 .alertmsg {
     text-align: center;
     color: red;
+}
+
+.item-infos {
+    width: 500px;
+    margin: 0 auto;
+}
+
+li {
+    width: 300px;
 }
