--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,14 @@
 html {
+    /*
     background: url("../images/background2.jpg") no-repeat center center fixed;
     background-repeat: no-repeat;
     margin-top: -30px;
-    color: #fff;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
+*/
+    color: #fff;
 }
 
 body {
@@ -45,7 +47,6 @@ form {
     font-size: 2em;
     font-weight: 200;
     letter-spacing: 4px;
-    outline: none;
 }
 
 #searchBtn {
@@ -78,7 +79,7 @@ img {
     width: 1270px;
     margin: 0 auto;
     display: inline-flex;
-    list-style-type: upper-roman;
+    list-style-type: none;
 }
 
 li {
@@ -87,8 +88,9 @@ li {
 
 .iteTitle {
     font-size: 18px;
-    color: teal;
-    font-weight: bold;
+    color: #9E9E9E;
+    font-weight: bolder;
+    font-family: fantasy;
 }
 
 .itemDetailsWrapper {
