fixed height added on item desc and padding as well

--- a/css/style.css
+++ b/css/style.css
@@ -121,4 +121,7 @@ li {
 .itemDescription {
     background-color: #565050;
     border-radius: 5px;
+    height: 300px;
+    overflow: hidden;
+    padding: 10px;
 }
