--- a/css/style.css
+++ b/css/style.css
@@ -89,15 +89,15 @@ img {
 
 li {
     width: 22%;
-    margin-right: 1%;
-    margin-left: 1%;
+    margin-right: 1.5%;
+    margin-left: 1.5%;
     text-align: center;
     display: inline-block;
 }
 
 .iteTitle {
     font-size: 18px;
-    color: #9E9E9E;
+    color: #fff;
     font-weight: bolder;
     font-family: fantasy;
     max-height: 1em;
@@ -127,62 +127,111 @@ li {
 }
 
 
-/*ipad lanscape / small laptop*/
-
-@media only screen and (max-width: 1024px) {
-    .hero-text {
-        font-size: 4em;
+                        /*optimizing to be mobile responsive*/
+@media (max-width:450px) {
+    body{
+        background:#2980b9;
     }
-    .sub-hero {
+   .hero-text{
+    font-size: 4.2em;
+    font-family: arial;
+    padding-bottom: 2rem;
+   }
+     #searchField {
+        height: 40px;
+        width: 300px;
+        font-size: 1.5em;
+        text-align: center;
+    }
+    #searchBtn{
+        padding: 6px 10px;
+        margin-top: 1rem;
+    }
+    .item-infos li{
+        width: 95%;
+    }
+}
+@media (min-width:451px) and (max-width:540px) {
+    body{
+        background:#8e44ad;
+    }
+    .hero-text{
+        font-size: 1.9rem;
+        padding-bottom: 5rem;
+        text-transform: uppercase;
+    }
+    #searchField{
+        margin-bottom: 1.2rem;
+    }
+    .item-infos{
+        width: 94%;
+    }
+    .item-infos li{
+        width: 35%;
+        margin-right: 3.5%;
+        margin-left: 3.5%;
+    }
+}
+@media (min-width:541px) and (max-width:768px) {
+    body{
+        background:#27ae60;
+    }
+    .hero-text{
+        font-size: 2.66rem;
+        padding-top: 1.8rem;
+        padding-bottom: 4rem;
+    }
+    .item-infos li{
+        width: 43%;
+        margin-right: 3.3%;
+        margin-left: 3.3%;
+    }
+    #searchField{
+        height: 35px;
+        width: 325px;
         font-size: 1.8em;
+        font-weight: 400;
     }
+    #searchbtn{
+        padding: 8px 15px;
+        font-size: 1.3em;
+        border-radius: 10px;
+        background-color: #d5641c;
+        color: white;
+        cursor: pointer;
+    }
+
 }
 
-
-/*ipad potrait*/
-
-@media only screen and (max-width: 768px) {
-    .hero-text {
-        font-size: 2.8em;
+@media (min-width:769px) and (max-width:1024px) {
+   body{
+        background:#16a085;
     }
-    .sub-hero {
-        font-size: 1.129em;
+    .hero-text{
+        font-size: 3.8rem;
+        padding-top: 2rem;
+        padding-bottom: 4rem;
     }
-    .item-infos {
-        width: 93%;
-    }
-    .itemImage {
-        border: 3px solid white;
-    }
-    #searchField {
-        margin-bottom: 7px;
+    .item-infos li{
+        width: 21%;
+        margin-right: 2%;
+        margin-left: 2%;
     }
 }
-
-
-/*iPhone landscape*/
-
-@media only screen and (max-width: 480px) {
-    .hero-text {
-        font-size: 2em;
-        padding-bottom: 5px;
+@media (min-width:1025px) and (max-width:1200px) {
+   body{
+        background:#c0392b;
     }
-    .sub-hero {
-        font-size: 1.129em;
+    .hero-text{
+        font-size: 5rem;
     }
-    .item-infos {
-        width: 93%;
-    }
-    .itemImage {
-        border: 3px solid white;
-    }
-    #searchField {
-        margin-bottom: 7px;
-        width: auto;
+    .item-infos li{
+     margin-right: 1.5%;
+     margin-left: 1.5%;
     }
 }
-
-
-/*iPhone portrait*/
-
-@media only screen and (max-width: 320px) {}
+@media (min-width:1201px){
+    body{
+        background:#ffd700;
+    }
+}
