--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ body {
 .module {
     margin-top: -5.5%;
     width: 100%;
-    height: 100vh;
+    height: 100%vh;
     
     background-size: cover;
 }
