--- a/css/style.css
+++ b/css/style.css
@@ -28,8 +28,8 @@ body {
 .module {
     margin-top: -5.5%;
     width: 100%;
-    height: 100%vh;
-    
+/*    height: 100%vh;
+*/    
     background-size: cover;
 }
 .darken {
