--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,7 @@ body {
     margin-top: -5.5%;
     width: 100%;
     background-size: cover;
+    height: 100vh;
 }
 .darken {
       background-image: linear-gradient( rgba(0, 0, 0, 1.9),
@@ -92,7 +93,7 @@ li {
     font-size: 18px;
     color: #fff;
     font-weight: bolder;
-    font-family: fantasy;
+    font-family: helvetica neue;
     max-height: 1em;
     overflow: hidden;
 }
